--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             supportingPartners: [
                 // The URLs for these logos have been replaced with local paths as per your request.
                 // Please ensure you have these images in a folder named 'logo' at the root.
-                { name: 'IIM Calcutta', logo: 'logo/iim_calcutta_logo.png', url: 'https://www.iimcal.ac.in/' },
+                { name: 'IIM Calcutta', logo: 'logo/iimc_logo.png', url: 'https://www.iimcal.ac.in/' },
                 { name: 'IIT Kanpur', logo: 'logo/iit_kanpur_logo.png', url: 'https://www.iitk.ac.in/' },
                 { name: 'IIT Madras', logo: 'logo/iit_madras_logo.png', url: 'https://www.iitm.ac.in/' },
-                { name: 'CII', logo: 'logo/cii_logo.png', url: 'https://www.cii.in/' },
+                { name: 'CII', logo: 'logo/cii_logo.jpg', url: 'https://www.cii.in/' },
                 { name: 'JICA', logo: 'logo/jica_logo.png', url: 'https://www.jica.go.jp/english/overseas/india/index.html' },
                 { name: 'DPIIT', logo: 'logo/dpiit_logo.png', url: 'https://www.dpiit.gov.in/' },
             ],
