--- a/pb.html
+++ b/pb.html
@@ -39,7 +39,7 @@
     <header class="w-full max-w-6xl text-center mb-12 animate-fade-in">
         <h1 class="text-5xl md:text-6xl font-extrabold text-gray-800 mb-6 leading-tight">Professional Background</h1>
         <p class="text-lg text-gray-600 mb-8 max-w-2xl mx-auto">
-            A list of companies where our alumni have built their professional careers, including a variety of roles across different sectors.
+            A list of companies where our cohort have built their professional careers, including a variety of roles across different sectors.
         </p>
     </header>
 
@@ -119,3 +119,4 @@
     </script>
 </body>
 </html>
+
